methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:1: error: ':' expected but ')' found.
def avant(i) {for (j<-1 to i) {avance()}}
           ^PictureMono2:23: error: identifier expected but '}' found.
}
^