methods.picture.PictureMono2.scala.code
def avant(i) {for (j<-1 to i) {avance()}}
def marquer () {baisseBrosse();leveBrosse()}
def faireV () {
  marquer()
  gauche();avance();droite();avance()
  marquer()
  avance();droite();avance()
  marquer()
}

def faireMotif() {
  avance();avance();
  faireV()
  for (i<-1 to 3) {gauche();avance();avance();gauche();avance();avance();faireV()}
  gauche();avance();avance();gauche()
}

override def run() {
  for (i<-1 to 3){for (j<- 1 to 3){faireMotif();avant(7)}
                 droite();droite();avant(20);droite();droite();avant(7);droite()}
}